--- a/速记.md
+++ b/速记.md
@@ -69,3 +69,8 @@ qt编程中，尽量避免将GUI和业务代码写到一切，当程序规模稍
 ### 1.7.3. 资源分配
 
 如果一块资源在整个程序期间都存在，并且，依赖这块资源的模块很多，尤其时整个程序围绕着这块资源转，应该把它设为全局的，通过依赖注入模式授权给其它模块使用。
+
+
+## 多使用自动化工具。
+
+例如，多使用自动化工具重构项目，使用自动化工具检查改善代码风格。
