--- a/Note/toolskill/操作系统.md
+++ b/Note/toolskill/操作系统.md
@@ -1,4 +1,4 @@
 1. Unbuntu 图形桌面就是灾难，Linux超好，使用wsl开发吧。使用Unbuntu桌面版，我得到了什么？我得到了教训和Unbuntu桌面版就是一坨屎。
-2. 使用windows 10 + wsl2 作为主要的系统。几乎没有任何性能损失。Unbuntu 桌面不使用了。使用wsl还可以访问windows磁盘里面的内容，完全没有任何差别。。。。cd/mnt ls。卧槽，微软牛逼。
-3. 使用zsh（神器） 完全兼容bash。。在win上使用Terminal 或者 VSCode 代替最基本的Unbantu命令行或者powershell命令行。
+2. 使用windows 10 + wsl2 作为主要的系统。几乎没有任何性能损失。Unbuntu 桌面不使用了。使用wsl还可以访问windows磁盘里面的内容，完全没有任何差别。。。。cd/mnt ls。微软牛逼。
+3. 使用powershell（神器） 完全兼容bash。。在win上使用Terminal 或者 VSCode 代替最基本的Unbantu命令行或者powershell命令行。
 4. 掌握包管理之后，使用clang C++编译器简直太方便了。
