--- a/Note/速记.md
+++ b/Note/速记.md
@@ -69,7 +69,6 @@ qt编程中，尽量避免将GUI和业务代码写到一切，当程序规模稍
 ### 1.7.3. 资源分配
 
 如果一块资源在整个程序期间都存在，并且，依赖这块资源的模块很多，尤其时整个程序围绕着这块资源转，应该把它设为全局的，通过依赖注入模式授权给其它模块使用。
-<<<<<<< HEAD:速记.md
 =======
 
 
@@ -86,5 +85,11 @@ qt编程中，尽量避免将GUI和业务代码写到一切，当程序规模稍
 
 ## C++的最大的作用是学习其它编程语言时可以相互印证。
 =======
->>>>>>> bbaf710fc0ddeb3bab11f45fc7b894e3e2e3ac7a:Note/速记.md
->>>>>>> 8082c6f0452852094b73512e41e0b69e71e0df5c
+
+## C++标准库和Qt库的设计理念不同
+
+C++标准库设计是完全的C++设计标准，零开销原则，细致入微的抽象（这导致了难以理解和复杂性，这个不容易入手。），
+Qt的设计是C++的另一面，它朝向易用性，功能性（面向场景复杂的应用），不遵循零开销原则，实现了反射，半自动垃圾回收。
+甚至，Qt也发展python 和 javascript 和 qml作为自己的语言。
+
+两种设计各有千秋。
