C++指针的引用

--- a/Note/cppskill/容量和索引.md
+++ b/Note/cppskill/容量和索引.md
@@ -1,3 +1,9 @@
+### 问题：
+
+    1. 如果我是2000年1月1日出生，那么，到2021年1月1日，我几岁了？
+
+    答案是：2021-2000 = 21岁
+
 数学中的计算，计算的都是容量。
 编程中，对于一个容器而言，访问容器中的元素，使用的是索引。\
 开区间和闭区间。有两个数a和b,a小于b,[a,b] 这是闭区间，它包含a和b,和a,b之间的数。(a,b),不包含a和b。
